--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nx/linter": "16.0.2",
     "@nx/web": "16.0.2",
     "@nx/workspace": "16.0.2",
+    "@nxext/capacitor": "^15.7.0",
     "@nxext/ionic-angular": "^15.7.0",
     "@schematics/angular": "~15.2.0",
     "@types/jest": "^29.4.0",
@@ -75,11 +76,9 @@
     "@ngxs/logger-plugin": "^3.8.0",
     "@ngxs/router-plugin": "^3.8.0",
     "@ngxs/store": "^3.7.6",
-    "@nxext/capacitor": "15.7.0",
     "appwrite": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   }
 }
-
