--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sio",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha",
   "license": "LGPL V3",
   "scripts": {},
   "private": true,
