--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,15 +1,17 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: Node.js Package
+name: publish
 
 on:
   release:
     types: [created]
 
 jobs:
+  
+
   publish-gpr:
-    runs-on: ubuntu-latest
+  runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -23,3 +25,4 @@ jobs:
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
