pre ionic 7 upgrade

--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "@capacitor/cli": "4.7.1",
     "@capacitor/ios": "4.7.1",
     "@ngxs/devtools-plugin": "^3.8.0",
-    "@nx/angular": "16.0.2",
-    "@nx/cypress": "16.0.2",
-    "@nx/eslint-plugin": "16.0.2",
-    "@nx/jest": "16.0.2",
-    "@nx/js": "16.0.2",
-    "@nx/linter": "16.0.2",
-    "@nx/web": "16.0.2",
-    "@nx/workspace": "16.0.2",
+    "@nx/angular": "16.0.3",
+    "@nx/cypress": "16.0.3",
+    "@nx/eslint-plugin": "16.0.3",
+    "@nx/jest": "16.0.3",
+    "@nx/js": "16.0.3",
+    "@nx/linter": "16.0.3",
+    "@nx/web": "16.0.3",
+    "@nx/workspace": "16.0.3",
     "@schematics/angular": "~15.2.0",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
@@ -41,8 +41,8 @@
     "jest-preset-angular": "~13.0.0",
     "ng-packagr": "~15.2.2",
     "npm": "^9.6.3",
-    "nx": "16.0.2",
-    "nx-cloud": "^16.0.5",
+    "nx": "16.0.3",
+    "nx-cloud": "16.0.5",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -80,3 +80,4 @@
     "zone.js": "~0.12.0"
   }
 }
+
