--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "sio",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1-alpha-1",
   "license": "LGPL V3",
   "scripts": {},
   "private": true,
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.2.0",
-    "@angular-devkit/core": "~15.2.0",
-    "@angular-devkit/schematics": "~15.2.0",
-    "@angular-eslint/eslint-plugin": "~15.0.0",
-    "@angular-eslint/eslint-plugin-template": "~15.0.0",
-    "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.2.0",
-    "@angular/compiler-cli": "~15.2.0",
-    "@angular/language-service": "~15.2.0",
+    "@angular-devkit/build-angular": "16.0.0",
+    "@angular-devkit/core": "16.0.0",
+    "@angular-devkit/schematics": "16.0.0",
+    "@angular-eslint/eslint-plugin": "16.0.1",
+    "@angular-eslint/eslint-plugin-template": "16.0.1",
+    "@angular-eslint/template-parser": "16.0.1",
+    "@angular/cli": "16.0.0",
+    "@angular/compiler-cli": "16.0.0",
+    "@angular/language-service": "16.0.0",
     "@capacitor/android": "4.7.1",
     "@capacitor/cli": "4.7.1",
     "@capacitor/ios": "4.7.1",
@@ -26,26 +26,26 @@
     "@nx/linter": "16.0.3",
     "@nx/web": "16.0.3",
     "@nx/workspace": "16.0.3",
-    "@schematics/angular": "~15.2.0",
+    "@schematics/angular": "16.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.59.1",
-    "@typescript-eslint/parser": "5.59.1",
+    "@typescript-eslint/eslint-plugin": "5.59.2",
+    "@typescript-eslint/parser": "5.59.2",
     "cypress": "^12.2.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
+    "eslint": "8.39.0",
+    "eslint-config-prettier": "8.8.0",
     "eslint-plugin-cypress": "^2.10.3",
     "install": "^0.13.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
-    "ng-packagr": "~15.2.2",
-    "npm": "^9.6.3",
+    "ng-packagr": "16.0.0",
+    "npm": "9.6.6",
     "nx": "16.0.3",
     "nx-cloud": "16.0.5",
     "postcss": "^8.4.5",
-    "postcss-import": "~14.1.0",
-    "postcss-preset-env": "~7.5.0",
+    "postcss-import": "15.1.0",
+    "postcss-preset-env": "8.3.2",
     "postcss-url": "~10.1.3",
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
@@ -55,20 +55,20 @@
   "dependencies": {
     "@angular-ru/cdk": "^14.10.1",
     "@angular-ru/ngxs": "^14.1.1",
-    "@angular/animations": "~15.2.0",
-    "@angular/common": "~15.2.0",
-    "@angular/compiler": "~15.2.0",
-    "@angular/core": "~15.2.0",
-    "@angular/forms": "~15.2.0",
-    "@angular/platform-browser": "~15.2.0",
-    "@angular/platform-browser-dynamic": "~15.2.0",
-    "@angular/router": "~15.2.0",
+    "@angular/animations": "16.0.0",
+    "@angular/common": "16.0.0",
+    "@angular/compiler": "16.0.0",
+    "@angular/core": "16.0.0",
+    "@angular/forms": "16.0.0",
+    "@angular/platform-browser": "16.0.0",
+    "@angular/platform-browser-dynamic": "16.0.0",
+    "@angular/router": "16.0.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.1",
     "@capacitor/haptics": "4.1.0",
     "@capacitor/keyboard": "4.1.1",
     "@capacitor/status-bar": "4.1.1",
-    "@ionic/angular": "^6.1.4",
+    "@ionic/angular": "7.0.5",
     "@ngneat/transloco": "^4.2.6",
     "@ngxs/form-plugin": "^3.8.0",
     "@ngxs/logger-plugin": "^3.8.0",
@@ -77,7 +77,6 @@
     "appwrite": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "0.13.0"
   }
 }
-
