--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "@angular-eslint/eslint-plugin": "16.0.1",
     "@angular-eslint/eslint-plugin-template": "16.0.1",
     "@angular-eslint/template-parser": "16.0.1",
-    "@angular/cli": "16.0.0",
+    "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "16.0.0",
     "@angular/language-service": "16.0.0",
-    "@capacitor/android": "4.7.1",
-    "@capacitor/cli": "4.7.1",
-    "@capacitor/ios": "4.7.1",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/cli": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
     "@ngxs/devtools-plugin": "^3.8.0",
-    "@nx/angular": "16.0.3",
-    "@nx/cypress": "16.0.3",
-    "@nx/eslint-plugin": "16.0.3",
-    "@nx/jest": "16.0.3",
-    "@nx/js": "16.0.3",
-    "@nx/linter": "16.0.3",
-    "@nx/web": "16.0.3",
-    "@nx/workspace": "16.0.3",
+    "@nx/angular": "16.1.0",
+    "@nx/cypress": "16.1.0",
+    "@nx/eslint-plugin": "16.1.0",
+    "@nx/jest": "16.1.0",
+    "@nx/js": "16.1.0",
+    "@nx/linter": "16.1.0",
+    "@nx/web": "16.1.0",
+    "@nx/workspace": "16.1.0",
     "@schematics/angular": "16.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "16.11.7",
@@ -41,7 +41,7 @@
     "jest-preset-angular": "~13.0.0",
     "ng-packagr": "16.0.0",
     "npm": "9.6.6",
-    "nx": "16.0.3",
+    "nx": "16.1.0",
     "nx-cloud": "16.0.5",
     "postcss": "^8.4.5",
     "postcss-import": "15.1.0",
@@ -50,7 +50,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "@angular-ru/cdk": "^14.10.1",
@@ -63,11 +63,11 @@
     "@angular/platform-browser": "16.0.0",
     "@angular/platform-browser-dynamic": "16.0.0",
     "@angular/router": "16.0.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.1",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/status-bar": "4.1.1",
+    "@capacitor/app": "5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/haptics": "5.0.0",
+    "@capacitor/keyboard": "5.0.0",
+    "@capacitor/status-bar": "5.0.0",
     "@ionic/angular": "7.0.5",
     "@ngneat/transloco": "^4.2.6",
     "@ngxs/form-plugin": "^3.8.0",
