--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,7 +17,8 @@
     "paths": {
       "@sio/appwrite": ["libs/appwrite/src/index.ts"],
       "@sio/auth": ["libs/auth/src/index.ts"],
-      "@sio/core": ["libs/core/src/index.ts"]
+      "@sio/core": ["libs/core/src/index.ts"],
+      "@sio/database": ["libs/database/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
