--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nrwl/angular": "15.9.4",
     "appwrite": "^11.0.0",
     "rxjs": "~7.8.1",
+    "swiper": "^9.4.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
   },
