--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "dependencies": {
     "@angular-ru/cdk": "^14.10.1",
     "@angular-ru/ngxs": "^14.1.3",
-    "@angular/animations": "~15.2.9",
-    "@angular/common": "~15.2.9",
-    "@angular/compiler": "~15.2.9",
-    "@angular/core": "~15.2.9",
-    "@angular/forms": "~15.2.9",
-    "@angular/platform-browser": "~15.2.9",
-    "@angular/platform-browser-dynamic": "~15.2.9",
-    "@angular/router": "~15.2.9",
+    "@angular/animations": "16.1.4",
+    "@angular/common": "16.1.4",
+    "@angular/compiler": "16.1.4",
+    "@angular/core": "16.1.4",
+    "@angular/forms": "16.1.4",
+    "@angular/platform-browser": "16.1.4",
+    "@angular/platform-browser-dynamic": "16.1.4",
+    "@angular/router": "16.1.4",
     "@capacitor/app": "5.0.2",
     "@capacitor/core": "5.0.3",
     "@ionic/angular": "^7.0.6",
@@ -23,53 +23,53 @@
     "@ngxs/logger-plugin": "^3.8.0",
     "@ngxs/router-plugin": "^3.8.0",
     "@ngxs/store": "^3.8.0",
-    "@nrwl/angular": "15.9.4",
+    "@nx/angular": "16.5.1",
     "appwrite": "^11.0.0",
     "rxjs": "~7.8.1",
-    "swiper": "^9.4.1",
+    "swiper": "^10.0.4",
     "tslib": "^2.5.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~15.2.8",
-    "@angular-devkit/core": "~15.2.8",
-    "@angular-devkit/schematics": "~15.2.8",
-    "@angular-eslint/eslint-plugin": "~15.0.0",
-    "@angular-eslint/eslint-plugin-template": "~15.0.0",
-    "@angular-eslint/template-parser": "~15.0.0",
-    "@angular/cli": "~15.2.8",
-    "@angular/compiler-cli": "~15.2.9",
-    "@angular/language-service": "~15.2.9",
+    "@angular-devkit/build-angular": "16.1.4",
+    "@angular-devkit/core": "16.1.4",
+    "@angular-devkit/schematics": "16.1.4",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
+    "@angular/cli": "~16.1.0",
+    "@angular/compiler-cli": "16.1.4",
+    "@angular/language-service": "16.1.4",
     "@ngxs/devtools-plugin": "^3.8.0",
-    "@nrwl/cypress": "15.9.4",
-    "@nrwl/eslint-plugin-nx": "15.9.4",
-    "@nrwl/jest": "15.9.4",
-    "@nrwl/js": "15.9.4",
-    "@nrwl/linter": "15.9.4",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/web": "15.9.4",
-    "@nrwl/workspace": "15.9.4",
-    "@schematics/angular": "~15.2.8",
+    "@nx/cypress": "16.5.1",
+    "@nx/eslint-plugin": "16.5.1",
+    "@nx/jest": "16.5.1",
+    "@nx/js": "16.5.1",
+    "@nx/linter": "16.5.1",
+    "@nx/web": "16.5.1",
+    "@nx/workspace": "16.5.1",
+    "@schematics/angular": "16.1.4",
     "@types/jest": "^29.5.1",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "cypress": "^12.12.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.13.3",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "~13.0.1",
-    "ng-packagr": "~15.2.2",
-    "nx": "15.9.4",
+    "jest-preset-angular": "13.1.1",
+    "ng-packagr": "16.1.0",
+    "nx": "16.5.1",
+    "nx-cloud": "16.0.5",
     "postcss": "^8.4.23",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
     "prettier": "^2.8.8",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "5.1.6"
   }
 }
