--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
   "dependencies": {
     "@angular-ru/cdk": "^14.10.1",
     "@angular-ru/ngxs": "^14.1.3",
-    "@angular/animations": "16.1.4",
-    "@angular/common": "16.1.4",
-    "@angular/compiler": "16.1.4",
-    "@angular/core": "16.1.4",
-    "@angular/forms": "16.1.4",
-    "@angular/platform-browser": "16.1.4",
-    "@angular/platform-browser-dynamic": "16.1.4",
-    "@angular/router": "16.1.4",
+    "@angular/animations": "16.2.8",
+    "@angular/common": "16.2.8",
+    "@angular/compiler": "16.2.8",
+    "@angular/core": "16.2.8",
+    "@angular/forms": "16.2.8",
+    "@angular/platform-browser": "16.2.8",
+    "@angular/platform-browser-dynamic": "16.2.8",
+    "@angular/router": "16.2.8",
     "@capacitor/app": "5.0.2",
     "@capacitor/core": "5.0.3",
     "@ionic/angular": "^7.0.6",
-    "@ngneat/transloco": "^4.2.6",
+    "@ngneat/transloco": "^6.0.0",
     "@ngxs/form-plugin": "^3.8.0",
     "@ngxs/logger-plugin": "^3.8.0",
     "@ngxs/router-plugin": "^3.8.0",
     "@ngxs/store": "^3.8.0",
-    "@nx/angular": "16.5.5",
+    "@nx/angular": "16.10.0",
     "appwrite": "^11.0.0",
     "rxjs": "~7.8.1",
     "swiper": "^10.0.4",
@@ -31,38 +31,38 @@
     "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.1.4",
-    "@angular-devkit/core": "16.1.4",
-    "@angular-devkit/schematics": "16.1.4",
+    "@angular-devkit/build-angular": "16.2.5",
+    "@angular-devkit/core": "16.2.5",
+    "@angular-devkit/schematics": "16.2.5",
     "@angular-eslint/eslint-plugin": "16.0.3",
     "@angular-eslint/eslint-plugin-template": "16.0.3",
     "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "16.1.4",
-    "@angular/language-service": "16.1.4",
+    "@angular/cli": "~16.2.0",
+    "@angular/compiler-cli": "16.2.8",
+    "@angular/language-service": "16.2.8",
     "@ngxs/devtools-plugin": "^3.8.0",
-    "@nx/cypress": "16.5.5",
-    "@nx/eslint-plugin": "16.5.5",
-    "@nx/jest": "16.5.5",
-    "@nx/js": "16.5.5",
-    "@nx/linter": "16.5.5",
-    "@nx/web": "16.5.5",
-    "@nx/workspace": "16.5.5",
-    "@schematics/angular": "16.1.4",
+    "@nx/cypress": "16.10.0",
+    "@nx/eslint-plugin": "16.10.0",
+    "@nx/jest": "16.10.0",
+    "@nx/js": "16.10.0",
+    "@nx/linter": "16.10.0",
+    "@nx/web": "16.10.0",
+    "@nx/workspace": "16.10.0",
+    "@schematics/angular": "16.2.5",
     "@types/jest": "^29.5.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "cypress": "^12.12.0",
-    "eslint": "~8.15.0",
+    "cypress": "^13.0.0",
+    "eslint": "8.46.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "jest-preset-angular": "13.1.1",
-    "ng-packagr": "16.1.0",
-    "nx": "16.5.5",
-    "nx-cloud": "16.1.1",
+    "ng-packagr": "16.2.3",
+    "nx": "16.10.0",
+    "nx-cloud": "16.4.0",
     "postcss": "^8.4.23",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
@@ -73,4 +73,3 @@
     "typescript": "5.1.6"
   }
 }
-
