--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular-ru/cdk": "^14.10.1",
-    "@angular-ru/ngxs": "^14.1.3",
+    "@angular-ru/cdk": "~14.10.0",
+    "@angular-ru/ngxs": "~14.1.0",
     "@angular/animations": "16.2.8",
     "@angular/common": "16.2.8",
     "@angular/compiler": "16.2.8",
@@ -15,32 +15,32 @@
     "@angular/platform-browser": "16.2.8",
     "@angular/platform-browser-dynamic": "16.2.8",
     "@angular/router": "16.2.8",
-    "@capacitor/app": "5.0.2",
-    "@capacitor/core": "5.0.3",
-    "@ionic/angular": "^7.0.6",
-    "@ngneat/transloco": "^6.0.0",
-    "@ngxs/form-plugin": "^3.8.0",
-    "@ngxs/logger-plugin": "^3.8.0",
-    "@ngxs/router-plugin": "^3.8.0",
-    "@ngxs/store": "^3.8.0",
+    "@capacitor/app": "^5.0.6",
+    "@capacitor/core": "^5.4.2",
+    "@ionic/angular": "^7.4.3",
+    "@ngneat/transloco": "^5.0.0",
+    "@ngxs/form-plugin": "^3.8.1",
+    "@ngxs/logger-plugin": "^3.8.1",
+    "@ngxs/router-plugin": "^3.8.1",
+    "@ngxs/store": "^3.8.1",
     "@nx/angular": "16.10.0",
-    "appwrite": "^11.0.0",
+    "appwrite": "^13.0.0",
     "rxjs": "~7.8.1",
-    "swiper": "^10.0.4",
-    "tslib": "^2.5.0",
-    "zone.js": "0.13.1"
+    "swiper": "^10.3.1",
+    "tslib": "^2.6.2",
+    "zone.js": "^0.14.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.2.5",
     "@angular-devkit/core": "16.2.5",
     "@angular-devkit/schematics": "16.2.5",
-    "@angular-eslint/eslint-plugin": "16.0.3",
-    "@angular-eslint/eslint-plugin-template": "16.0.3",
-    "@angular-eslint/template-parser": "16.0.3",
-    "@angular/cli": "~16.2.0",
+    "@angular-eslint/eslint-plugin": "^16.2.0",
+    "@angular-eslint/eslint-plugin-template": "^16.2.0",
+    "@angular-eslint/template-parser": "^16.2.0",
+    "@angular/cli": "~16.2.5",
     "@angular/compiler-cli": "16.2.8",
     "@angular/language-service": "16.2.8",
-    "@ngxs/devtools-plugin": "^3.8.0",
+    "@ngxs/devtools-plugin": "^3.8.1",
     "@nx/cypress": "16.10.0",
     "@nx/eslint-plugin": "16.10.0",
     "@nx/jest": "16.10.0",
@@ -49,27 +49,27 @@
     "@nx/web": "16.10.0",
     "@nx/workspace": "16.10.0",
     "@schematics/angular": "16.2.5",
-    "@types/jest": "^29.5.1",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
-    "cypress": "^13.0.0",
-    "eslint": "8.46.0",
-    "eslint-config-prettier": "8.1.0",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "cypress": "^13.3.0",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "2.15.1",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "13.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^13.1.2",
     "ng-packagr": "16.2.3",
     "nx": "16.10.0",
     "nx-cloud": "16.4.0",
-    "postcss": "^8.4.23",
-    "postcss-import": "~14.1.0",
-    "postcss-preset-env": "~7.5.0",
+    "postcss": "^8.4.31",
+    "postcss-import": "^15.1.0",
+    "postcss-preset-env": "^9.2.0",
     "postcss-url": "~10.1.3",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "5.1.6"
+    "typescript": "~5.1.0"
   }
 }
