--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@ionic/angular": "^7.4.3",
-    "@ngneat/transloco": "^5.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "@ngxs/form-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "@nx/angular": "16.10.0",
     "appwrite": "^13.0.0",
+    "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.1",
     "swiper": "^10.3.1",
     "tslib": "^2.6.2",
