--- a/libs/core/project.json
+++ b/libs/core/project.json
@@ -10,8 +10,7 @@
       "executor": "@nx/angular:package",
       "outputs": ["{workspaceRoot}/dist/{projectRoot}"],
       "options": {
-        "project": "libs/core/ng-package.json",
-        "updateBuildableProjectDepsInPackageJson": true
+        "project": "libs/core/ng-package.json"
       },
       "configurations": {
         "production": {
@@ -38,7 +37,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["libs/core/**/*.ts", "libs/core/**/*.html"]
