--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@angular-ru/cdk": "~14.10.0",
-    "@angular-ru/ngxs": "~14.1.0",
-    "@angular/animations": "16.2.8",
-    "@angular/common": "16.2.8",
-    "@angular/compiler": "16.2.8",
-    "@angular/core": "16.2.8",
-    "@angular/forms": "16.2.8",
-    "@angular/platform-browser": "16.2.8",
-    "@angular/platform-browser-dynamic": "16.2.8",
-    "@angular/router": "16.2.8",
+    "@angular-ru/cdk": "14.11.2",
+    "@angular-ru/ngxs": "14.2.2",
+    "@angular/animations": "16.2.10",
+    "@angular/common": "16.2.10",
+    "@angular/compiler": "16.2.10",
+    "@angular/core": "16.2.10",
+    "@angular/forms": "16.2.10",
+    "@angular/platform-browser": "16.2.10",
+    "@angular/platform-browser-dynamic": "16.2.10",
+    "@angular/router": "16.2.10",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@ionic/angular": "^7.4.3",
@@ -24,13 +24,13 @@
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "16.10.0",
+    "@nx/angular": "17.0.1",
     "appwrite": "^13.0.0",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.1",
     "swiper": "^10.3.1",
     "tslib": "^2.6.2",
-    "zone.js": "~0.13.0"
+    "zone.js": "0.13.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "16.2.5",
@@ -40,31 +40,29 @@
     "@angular-eslint/eslint-plugin-template": "^16.2.0",
     "@angular-eslint/template-parser": "^16.2.0",
     "@angular/cli": "~16.2.5",
-    "@angular/compiler-cli": "16.2.8",
-    "@angular/language-service": "16.2.8",
+    "@angular/compiler-cli": "16.2.10",
+    "@angular/language-service": "16.2.10",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "16.10.0",
-    "@nx/eslint-plugin": "16.10.0",
-    "@nx/jest": "16.10.0",
-    "@nx/js": "16.10.0",
-    "@nx/linter": "16.10.0",
-    "@nx/web": "16.10.0",
-    "@nx/workspace": "16.10.0",
-    "@schematics/angular": "16.2.5",
+    "@nx/cypress": "17.0.1",
+    "@nx/eslint-plugin": "17.0.1",
+    "@nx/jest": "17.0.1",
+    "@nx/js": "17.0.1",
+    "@nx/web": "17.0.1",
+    "@nx/workspace": "17.0.1",
+    "@schematics/angular": "16.2.7",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.4",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "cypress": "^13.3.0",
     "eslint": "^8.51.0",
-    "eslint-config-prettier": "^8.0.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "^13.1.2",
     "ng-packagr": "16.2.3",
-    "nx": "16.10.0",
-    "nx-cloud": "16.4.0",
+    "nx": "17.0.1",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.2.0",
@@ -72,6 +70,8 @@
     "prettier": "^3.0.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.0"
+    "typescript": "~5.1.0",
+    "@nx/eslint": "17.0.1"
   }
 }
+
