--- a/libs/auth/package.json
+++ b/libs/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@sio/auth",
+  "name": "@silicia/auth",
   "version": "0.0.2",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
