--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "appwrite": "^13.0.0",
     "ngx-translate-debug": "^0.1.4",
     "rxjs": "~7.8.1",
-    "swiper": "^10.3.1",
+    "swiper": "^11.0.1",
     "tslib": "^2.6.2",
     "zone.js": "0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.5",
-    "@angular-devkit/core": "16.2.5",
-    "@angular-devkit/schematics": "16.2.5",
+    "@angular-devkit/build-angular": "16.2.7",
+    "@angular-devkit/core": "16.2.7",
+    "@angular-devkit/schematics": "16.2.7",
     "@angular-eslint/eslint-plugin": "^16.2.0",
     "@angular-eslint/eslint-plugin-template": "^16.2.0",
     "@angular-eslint/template-parser": "^16.2.0",
@@ -44,6 +44,7 @@
     "@angular/language-service": "16.2.10",
     "@ngxs/devtools-plugin": "^3.8.1",
     "@nx/cypress": "17.0.1",
+    "@nx/eslint": "17.0.1",
     "@nx/eslint-plugin": "17.0.1",
     "@nx/jest": "17.0.1",
     "@nx/js": "17.0.1",
@@ -70,8 +71,6 @@
     "prettier": "^3.0.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.0",
-    "@nx/eslint": "17.0.1"
+    "typescript": "~5.1.0"
   }
 }
-
