--- a/apps/demo/project.json
+++ b/apps/demo/project.json
@@ -18,7 +18,7 @@
         "assets": [
           {
             "glob": "**/*",
-            "input": "src/assets",
+            "input": "apps/demo/src/assets",
             "output": "assets"
           },
           {
