--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "scripts": {
+    "postinstall": "ngcc --properties es2015 browser module main"
+  }
 }
