--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   "dependencies": {
     "@angular-ru/cdk": "14.11.2",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "16.2.12",
-    "@angular/common": "16.2.12",
-    "@angular/compiler": "16.2.12",
-    "@angular/core": "16.2.12",
-    "@angular/forms": "16.2.12",
-    "@angular/platform-browser": "16.2.12",
-    "@angular/platform-browser-dynamic": "16.2.12",
-    "@angular/router": "16.2.12",
+    "@angular/animations": "17.0.2",
+    "@angular/common": "17.0.2",
+    "@angular/compiler": "17.0.2",
+    "@angular/core": "17.0.2",
+    "@angular/forms": "17.0.2",
+    "@angular/platform-browser": "17.0.2",
+    "@angular/platform-browser-dynamic": "17.0.2",
+    "@angular/router": "17.0.2",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@ionic/angular": "^7.4.3",
@@ -24,46 +24,59 @@
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "17.0.3",
+    "@nx/angular": "17.1.1",
     "appwrite": "^13.0.0",
     "ngx-translate-debug": "^0.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.8.1",
     "swiper": "^11.0.1",
     "tslib": "^2.6.2",
-    "zone.js": "0.13.3"
+    "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "16.2.9",
-    "@angular-devkit/core": "16.2.9",
-    "@angular-devkit/schematics": "16.2.9",
-    "@angular-eslint/eslint-plugin": "^16.2.0",
-    "@angular-eslint/eslint-plugin-template": "^16.2.0",
-    "@angular-eslint/template-parser": "^16.2.0",
-    "@angular/cli": "~16.2.5",
-    "@angular/compiler-cli": "16.2.12",
-    "@angular/language-service": "16.2.12",
+    "@angular-devkit/build-angular": "17.0.0",
+    "@angular-devkit/core": "17.0.0",
+    "@angular-devkit/schematics": "17.0.0",
+    "@angular-eslint/eslint-plugin": "17.0.1",
+    "@angular-eslint/eslint-plugin-template": "17.0.1",
+    "@angular-eslint/template-parser": "17.0.1",
+    "@angular/cli": "~17.0.0",
+    "@angular/compiler-cli": "17.0.2",
+    "@angular/language-service": "17.0.2",
+    "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "17.0.3",
-    "@nx/eslint": "17.0.3",
-    "@nx/eslint-plugin": "17.0.3",
-    "@nx/jest": "17.0.3",
-    "@nx/js": "17.0.3",
-    "@nx/web": "17.0.3",
-    "@nx/workspace": "17.0.3",
-    "@schematics/angular": "16.2.9",
+    "@nx/cypress": "17.1.1",
+    "@nx/eslint": "17.1.1",
+    "@nx/eslint-plugin": "17.1.1",
+    "@nx/jest": "17.1.1",
+    "@nx/js": "17.1.1",
+    "@nx/storybook": "17.1.1",
+    "@nx/web": "17.1.1",
+    "@nx/workspace": "17.1.1",
+    "@schematics/angular": "17.0.0",
+    "@storybook/addon-essentials": "7.5.3",
+    "@storybook/addon-interactions": "7.5.3",
+    "@storybook/angular": "7.5.3",
+    "@storybook/core-server": "7.5.3",
+    "@storybook/jest": "0.2.3",
+    "@storybook/test-runner": "0.13.0",
+    "@storybook/testing-library": "0.2.2",
+    "@swc-node/register": "~1.6.7",
+    "@swc/core": "~1.3.85",
     "@types/jest": "^29.5.5",
     "@types/node": "^20.8.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
     "cypress": "^13.3.0",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "^13.1.2",
-    "ng-packagr": "16.2.3",
-    "nx": "17.0.3",
+    "jest-preset-angular": "13.1.3",
+    "ng-packagr": "17.0.0",
+    "nx": "17.1.1",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.2.0",
@@ -71,7 +84,6 @@
     "prettier": "^3.0.3",
     "ts-jest": "29.1.1",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.0"
+    "typescript": "5.2.2"
   }
 }
-
