--- a/libs/database/project.json
+++ b/libs/database/project.json
@@ -31,10 +31,7 @@
     },
     "lint": {
       "executor": "@nx/eslint:lint",
-      "outputs": ["{options.outputFile}"],
-      "options": {
-        "lintFilePatterns": ["libs/database/**/*.ts", "libs/database/**/*.html"]
-      }
+      "outputs": ["{options.outputFile}"]
     }
   }
 }
