--- a/package.json
+++ b/package.json
@@ -7,24 +7,25 @@
   "dependencies": {
     "@angular-ru/cdk": "14.11.2",
     "@angular-ru/ngxs": "14.2.2",
-    "@angular/animations": "17.0.2",
-    "@angular/common": "17.0.2",
-    "@angular/compiler": "17.0.2",
-    "@angular/core": "17.0.2",
-    "@angular/forms": "17.0.2",
-    "@angular/platform-browser": "17.0.2",
-    "@angular/platform-browser-dynamic": "17.0.2",
-    "@angular/router": "17.0.2",
+    "@angular/animations": "17.0.7",
+    "@angular/common": "17.0.7",
+    "@angular/compiler": "17.0.7",
+    "@angular/core": "17.0.7",
+    "@angular/forms": "17.0.7",
+    "@angular/platform-browser": "17.0.7",
+    "@angular/platform-browser-dynamic": "17.0.7",
+    "@angular/router": "17.0.7",
     "@capacitor/app": "^5.0.6",
     "@capacitor/core": "^5.4.2",
     "@ionic/angular": "^7.4.3",
+    "@maskito/angular": "^1.9.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@ngxs/form-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "17.1.2",
+    "@nx/angular": "17.2.6",
     "appwrite": "^13.0.0",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
@@ -35,48 +36,48 @@
     "zone.js": "0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.0.0",
-    "@angular-devkit/core": "17.0.0",
-    "@angular-devkit/schematics": "17.0.0",
-    "@angular-eslint/eslint-plugin": "17.0.1",
-    "@angular-eslint/eslint-plugin-template": "17.0.1",
-    "@angular-eslint/template-parser": "17.0.1",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "17.0.2",
-    "@angular/language-service": "17.0.2",
+    "@angular-devkit/build-angular": "17.0.7",
+    "@angular-devkit/core": "17.0.7",
+    "@angular-devkit/schematics": "17.0.7",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
+    "@angular/cli": "17.0.7",
+    "@angular/compiler-cli": "17.0.7",
+    "@angular/language-service": "17.0.7",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "17.1.2",
-    "@nx/eslint": "17.1.2",
-    "@nx/eslint-plugin": "17.1.2",
-    "@nx/jest": "17.1.2",
-    "@nx/js": "17.1.2",
-    "@nx/storybook": "17.1.2",
-    "@nx/web": "17.1.2",
-    "@nx/workspace": "17.1.2",
-    "@schematics/angular": "17.0.0",
-    "@storybook/addon-essentials": "7.5.3",
-    "@storybook/addon-interactions": "7.5.3",
-    "@storybook/angular": "7.5.3",
-    "@storybook/core-server": "7.5.3",
+    "@nx/cypress": "17.2.6",
+    "@nx/eslint": "17.2.6",
+    "@nx/eslint-plugin": "17.2.6",
+    "@nx/jest": "17.2.6",
+    "@nx/js": "17.2.6",
+    "@nx/storybook": "17.2.6",
+    "@nx/web": "17.2.6",
+    "@nx/workspace": "17.2.6",
+    "@schematics/angular": "17.0.7",
+    "@storybook/addon-essentials": "7.6.6",
+    "@storybook/addon-interactions": "7.6.6",
+    "@storybook/angular": "7.6.6",
+    "@storybook/core-server": "7.6.6",
     "@storybook/jest": "0.2.3",
-    "@storybook/test-runner": "0.13.0",
+    "@storybook/test-runner": "0.16.0",
     "@storybook/testing-library": "0.2.2",
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.5.5",
-    "@types/node": "^20.8.4",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
+    "@types/node": "20.10.4",
+    "@typescript-eslint/eslint-plugin": "6.14.0",
+    "@typescript-eslint/parser": "6.14.0",
     "cypress": "^13.3.0",
-    "eslint": "^8.51.0",
-    "eslint-config-prettier": "9.0.0",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "jest-preset-angular": "13.1.3",
+    "jest-preset-angular": "13.1.4",
     "ng-packagr": "17.0.0",
-    "nx": "17.1.2",
+    "nx": "17.2.6",
     "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^9.2.0",
