--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "@angular-devkit/build-angular": "17.0.7",
     "@angular-devkit/core": "17.0.7",
     "@angular-devkit/schematics": "17.0.7",
-    "@angular-eslint/eslint-plugin": "16.3.1",
-    "@angular-eslint/eslint-plugin-template": "16.3.1",
-    "@angular-eslint/template-parser": "16.3.1",
+    "@angular-eslint/eslint-plugin": "~17.0.0",
+    "@angular-eslint/eslint-plugin-template": "~17.0.0",
+    "@angular-eslint/template-parser": "~17.0.0",
     "@angular/cli": "17.0.7",
     "@angular/compiler-cli": "17.0.7",
     "@angular/language-service": "17.0.7",
@@ -78,6 +78,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "13.1.4",
+    "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.0.0",
     "nx": "17.2.8",
     "postcss": "^8.4.31",
