--- a/libs/storage/package.json
+++ b/libs/storage/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@silicia/storage",
-  "version": "0.0.1",
+  "version": "0.0.1-alpha",
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0"
+    "@angular/common": "^15.2.0",
+    "@angular/core": "^15.2.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
