--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
-    "@nx/angular": "17.2.8",
+    "@nx/angular": "17.3.0",
     "appwrite": "^13.0.1",
     "ngx-translate-debug": "^0.1.4",
     "react": "^18.2.0",
@@ -45,19 +45,19 @@
     "@angular-eslint/eslint-plugin": "17.2.1",
     "@angular-eslint/eslint-plugin-template": "17.2.1",
     "@angular-eslint/template-parser": "17.2.1",
-    "@angular/cli": "17.1.1",
+    "@angular/cli": "~17.1.0",
     "@angular/compiler-cli": "17.1.1",
     "@angular/language-service": "17.1.1",
     "@compodoc/compodoc": "^1.1.22",
     "@ngxs/devtools-plugin": "^3.8.1",
-    "@nx/cypress": "17.2.8",
-    "@nx/eslint": "17.2.8",
-    "@nx/eslint-plugin": "17.2.8",
-    "@nx/jest": "17.2.8",
-    "@nx/js": "17.2.8",
-    "@nx/storybook": "17.2.8",
-    "@nx/web": "17.2.8",
-    "@nx/workspace": "17.2.8",
+    "@nx/cypress": "17.3.0",
+    "@nx/eslint": "17.3.0",
+    "@nx/eslint-plugin": "17.3.0",
+    "@nx/jest": "17.3.0",
+    "@nx/js": "17.3.0",
+    "@nx/storybook": "17.3.0",
+    "@nx/web": "17.3.0",
+    "@nx/workspace": "17.3.0",
     "@schematics/angular": "17.1.1",
     "@storybook/addon-essentials": "7.6.10",
     "@storybook/addon-interactions": "7.6.10",
@@ -69,9 +69,10 @@
     "@swc-node/register": "~1.6.7",
     "@swc/core": "~1.3.85",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.11.6",
-    "@typescript-eslint/eslint-plugin": "6.19.1",
-    "@typescript-eslint/parser": "6.19.1",
+    "@types/node": "20.11.11",
+    "@typescript-eslint/eslint-plugin": "6.20.0",
+    "@typescript-eslint/parser": "6.20.0",
+    "autoprefixer": "^10.4.0",
     "cypress": "^13.3.0",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
@@ -81,7 +82,7 @@
     "jest-preset-angular": "14.0.0",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "17.1.2",
-    "nx": "17.2.8",
+    "nx": "17.3.0",
     "postcss": "^8.4.31",
     "postcss-import": "16.0.0",
     "postcss-preset-env": "^9.2.0",
