fix: Update versions of dependencies

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {},
   "private": false,
   "dependencies": {
-    "@angular-ru/cdk": "15.1.0",
+    "@angular-ru/cdk": "15.2.0",
     "@angular-ru/ngxs": "14.2.2",
     "@angular/animations": "17.3.4",
     "@angular/cdk": "^17.1.0",
@@ -59,22 +59,22 @@
     "@nx/web": "18.2.4",
     "@nx/workspace": "18.2.4",
     "@schematics/angular": "17.3.4",
-    "@storybook/addon-essentials": "8.0.5",
-    "@storybook/addon-interactions": "8.0.5",
-    "@storybook/angular": "8.0.5",
-    "@storybook/core-server": "8.0.5",
+    "@storybook/addon-essentials": "8.0.8",
+    "@storybook/addon-interactions": "8.0.8",
+    "@storybook/angular": "8.0.8",
+    "@storybook/core-server": "8.0.8",
     "@storybook/jest": "0.2.3",
     "@storybook/test-runner": "0.17.0",
     "@storybook/testing-library": "0.2.2",
     "@swc-node/register": "1.9.0",
-    "@swc/core": "1.4.11",
+    "@swc/core": "1.4.14",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.12.2",
-    "@typescript-eslint/eslint-plugin": "7.5.0",
-    "@typescript-eslint/parser": "7.5.0",
+    "@types/node": "20.12.7",
+    "@typescript-eslint/eslint-plugin": "7.6.0",
+    "@typescript-eslint/parser": "7.6.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^13.6.6",
-    "eslint": "8.57.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "2.15.1",
     "jest": "^29.7.0",
@@ -90,7 +90,7 @@
     "prettier": "^3.0.3",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
-    "typescript": "5.4.3"
+    "typescript": "5.4.5"
   }
 }
 
