--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
     "paths": {
       "@silicia/appwrite": ["libs/appwrite/src/index.ts"],
       "@silicia/auth": ["libs/auth/src/index.ts"],
+      "@silicia/chat": ["libs/chat/src/index.ts"],
       "@silicia/core": ["libs/core/src/index.ts"],
       "@silicia/database": ["libs/database/src/index.ts"],
       "@silicia/storage": ["libs/storage/src/index.ts"]
