--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "dependencies": {
     "@angular-ru/cdk": "18.10.0",
     "@angular-ru/ngxs": "18.10.0",
-    "@angular/animations": "19.2.0",
+    "@angular/animations": "19.2.9",
     "@angular/cdk": "19.2.1",
-    "@angular/common": "19.2.0",
-    "@angular/compiler": "19.2.0",
-    "@angular/core": "19.2.0",
-    "@angular/forms": "19.2.0",
-    "@angular/platform-browser": "19.2.0",
-    "@angular/platform-browser-dynamic": "19.2.0",
-    "@angular/router": "19.2.0",
+    "@angular/common": "19.2.9",
+    "@angular/compiler": "19.2.9",
+    "@angular/core": "19.2.9",
+    "@angular/forms": "19.2.9",
+    "@angular/platform-browser": "19.2.9",
+    "@angular/platform-browser-dynamic": "19.2.9",
+    "@angular/router": "19.2.9",
     "@capacitor/app": "7.0.0",
     "@capacitor/core": "7.0.1",
     "@capawesome/capacitor-file-picker": "7.0.1",
-    "@ionic/angular": "8.4.3",
+    "@ionic/angular": "8.5.6",
     "@maskito/angular": "3.3.0",
     "@maskito/core": "3.3.0",
     "@ngx-translate/core": "16.0.4",
@@ -28,8 +28,8 @@
     "@ngxs/logger-plugin": "19.0.0",
     "@ngxs/router-plugin": "19.0.0",
     "@ngxs/store": "19.0.0",
-    "@nx/angular": "20.4.6",
-    "appwrite": "17.0.0",
+    "@nx/angular": "20.8.1",
+    "appwrite": "17.0.2",
     "ngx-translate-debug": "^0.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -43,49 +43,51 @@
     "@angular-devkit/build-angular": "19.2.0",
     "@angular-devkit/core": "19.2.0",
     "@angular-devkit/schematics": "19.2.0",
-    "@angular-eslint/eslint-plugin": "19.2.0",
-    "@angular-eslint/eslint-plugin-template": "19.2.0",
-    "@angular-eslint/template-parser": "19.2.0",
-    "@angular/cli": "19.2.0",
-    "@angular/compiler-cli": "19.2.0",
-    "@angular/language-service": "19.2.0",
+    "@angular-eslint/eslint-plugin": "19.3.0",
+    "@angular-eslint/eslint-plugin-template": "19.3.0",
+    "@angular-eslint/template-parser": "19.3.0",
+    "@angular/cli": "~19.2.0",
+    "@angular/compiler-cli": "19.2.9",
+    "@angular/language-service": "19.2.9",
     "@capacitor/cli": "7.0.1",
     "@chromatic-com/storybook": "3.2.5",
     "@compodoc/compodoc": "^1.1.24",
     "@ngxs/devtools-plugin": "19.0.0",
-    "@nx/cypress": "20.4.6",
-    "@nx/eslint": "20.4.6",
-    "@nx/eslint-plugin": "20.4.6",
-    "@nx/jest": "20.4.6",
-    "@nx/js": "20.4.6",
-    "@nx/storybook": "20.4.6",
-    "@nx/web": "20.4.6",
-    "@nx/workspace": "20.4.6",
+    "@nx/cypress": "20.8.1",
+    "@nx/eslint": "20.8.1",
+    "@nx/eslint-plugin": "20.8.1",
+    "@nx/jest": "20.8.1",
+    "@nx/js": "20.8.1",
+    "@nx/storybook": "20.8.1",
+    "@nx/web": "20.8.1",
+    "@nx/workspace": "20.8.1",
     "@schematics/angular": "19.2.0",
-    "@storybook/addon-essentials": "8.6.3",
-    "@storybook/addon-interactions": "8.6.3",
-    "@storybook/angular": "8.6.3",
-    "@storybook/core-server": "8.6.3",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-interactions": "8.6.12",
+    "@storybook/angular": "8.6.12",
+    "@storybook/core-server": "8.6.12",
     "@storybook/test": "8.6.3",
     "@storybook/test-runner": "0.22.0",
     "@swc-node/register": "1.10.9",
     "@swc/core": "1.11.7",
+    "@swc/helpers": "~0.5.11",
     "@types/jest": "29.5.14",
     "@types/node": "22.13.9",
     "@typescript-eslint/eslint-plugin": "8.26.0",
     "@typescript-eslint/parser": "8.26.0",
     "@typescript-eslint/utils": "8.26.0",
+    "angular-eslint": "^19.2.0",
     "autoprefixer": "^10.4.0",
-    "cypress": "13.17.0",
+    "cypress": "14.3.2",
     "eslint": "9.21.0",
-    "eslint-config-prettier": "9.1.0",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-cypress": "4.1.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
     "jest-preset-angular": "14.5.3",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "19.2.0",
-    "nx": "20.4.6",
+    "nx": "20.8.1",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "10.1.5",
@@ -93,6 +95,10 @@
     "prettier": "^3.0.3",
     "ts-jest": "29.2.6",
     "ts-node": "10.9.2",
-    "typescript": "5.8.2"
+    "typescript": "5.8.2",
+    "verdaccio": "^6.0.5"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
