--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.4-alpha",
   "peerDependencies": {
     "@angular/common": "^15.2.0",
-    "@angular/core": "^15.2.0"
+    "@angular/core": "^15.2.0",
+    "date-fns": "^4.1.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
