--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@angular-ru/cdk": "18.10.0",
     "@angular-ru/ngxs": "18.10.0",
     "@angular/animations": "19.2.9",
-    "@angular/cdk": "19.2.1",
+    "@angular/cdk": "19.2.14",
     "@angular/common": "19.2.9",
     "@angular/compiler": "19.2.9",
     "@angular/core": "19.2.9",
@@ -16,12 +16,12 @@
     "@angular/platform-browser": "19.2.9",
     "@angular/platform-browser-dynamic": "19.2.9",
     "@angular/router": "19.2.9",
-    "@capacitor/app": "7.0.0",
-    "@capacitor/core": "7.0.1",
+    "@capacitor/app": "7.0.1",
+    "@capacitor/core": "7.2.0",
     "@capawesome/capacitor-file-picker": "7.0.1",
     "@ionic/angular": "8.5.6",
-    "@maskito/angular": "3.3.0",
-    "@maskito/core": "3.3.0",
+    "@maskito/angular": "3.7.2",
+    "@maskito/core": "3.7.2",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "16.0.1",
     "@ngxs/form-plugin": "19.0.0",
@@ -30,9 +30,10 @@
     "@ngxs/store": "19.0.0",
     "@nx/angular": "20.8.1",
     "appwrite": "17.0.2",
+    "date-fns": "^4.1.0",
     "ngx-translate-debug": "^0.1.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "rxjs": "~7.8.1",
     "storybook": "^8.2.8",
     "swiper": "^11.0.1",
@@ -40,17 +41,17 @@
     "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "19.2.0",
-    "@angular-devkit/core": "19.2.0",
-    "@angular-devkit/schematics": "19.2.0",
+    "@angular-devkit/build-angular": "19.2.10",
+    "@angular-devkit/core": "19.2.10",
+    "@angular-devkit/schematics": "19.2.10",
     "@angular-eslint/eslint-plugin": "19.3.0",
     "@angular-eslint/eslint-plugin-template": "19.3.0",
     "@angular-eslint/template-parser": "19.3.0",
     "@angular/cli": "~19.2.0",
     "@angular/compiler-cli": "19.2.9",
     "@angular/language-service": "19.2.9",
-    "@capacitor/cli": "7.0.1",
-    "@chromatic-com/storybook": "3.2.5",
+    "@capacitor/cli": "7.2.0",
+    "@chromatic-com/storybook": "3.2.6",
     "@compodoc/compodoc": "^1.1.24",
     "@ngxs/devtools-plugin": "19.0.0",
     "@nx/cypress": "20.8.1",
@@ -61,41 +62,41 @@
     "@nx/storybook": "20.8.1",
     "@nx/web": "20.8.1",
     "@nx/workspace": "20.8.1",
-    "@schematics/angular": "19.2.0",
+    "@schematics/angular": "19.2.10",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-interactions": "8.6.12",
     "@storybook/angular": "8.6.12",
     "@storybook/core-server": "8.6.12",
-    "@storybook/test": "8.6.3",
+    "@storybook/test": "8.6.12",
     "@storybook/test-runner": "0.22.0",
-    "@swc-node/register": "1.10.9",
-    "@swc/core": "1.11.7",
-    "@swc/helpers": "~0.5.11",
+    "@swc-node/register": "1.10.10",
+    "@swc/core": "1.11.24",
+    "@swc/helpers": "0.5.17",
     "@types/jest": "29.5.14",
-    "@types/node": "22.13.9",
-    "@typescript-eslint/eslint-plugin": "8.26.0",
-    "@typescript-eslint/parser": "8.26.0",
-    "@typescript-eslint/utils": "8.26.0",
+    "@types/node": "22.15.3",
+    "@typescript-eslint/eslint-plugin": "8.31.1",
+    "@typescript-eslint/parser": "8.31.1",
+    "@typescript-eslint/utils": "8.31.1",
     "angular-eslint": "^19.2.0",
     "autoprefixer": "^10.4.0",
     "cypress": "14.3.2",
-    "eslint": "9.21.0",
+    "eslint": "9.25.1",
     "eslint-config-prettier": "10.1.2",
-    "eslint-plugin-cypress": "4.1.0",
+    "eslint-plugin-cypress": "4.3.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "jest-preset-angular": "14.5.3",
+    "jest-preset-angular": "14.5.5",
     "jsonc-eslint-parser": "^2.1.0",
-    "ng-packagr": "19.2.0",
+    "ng-packagr": "19.2.2",
     "nx": "20.8.1",
     "postcss": "^8.4.31",
     "postcss-import": "16.1.0",
-    "postcss-preset-env": "10.1.5",
+    "postcss-preset-env": "10.1.6",
     "postcss-url": "~10.1.3",
     "prettier": "^3.0.3",
-    "ts-jest": "29.2.6",
+    "ts-jest": "29.3.2",
     "ts-node": "10.9.2",
-    "typescript": "5.8.2",
+    "typescript": "5.8.3",
     "verdaccio": "^6.0.5"
   },
   "nx": {
