chore: switch from npm to pnpm for package management in CI workflow

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -23,13 +23,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 20
-          cache: 'npm'
+          cache: 'pnpm'
       # This line enables distribution
       # The "--stop-agents-after" is optional, but allows idle agents to shut down once the "e2e-ci" targets have been requested
       # - run: npx nx-cloud start-ci-run --distribute-on="3 linux-medium-js" --stop-agents-after="e2e-ci"
-      - run: npm ci
+      - run: pnpm ci
 
       - uses: nrwl/nx-set-shas@v4
 
-      - run: npx nx-cloud record -- nx format:check
-      - run: npx nx affected -t lint test build e2e-ci
+      - run: pnpm dlx nx-cloud record -- nx format:check
+      - run: pnpm dlx nx affected -t lint test build e2e-ci
