--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@capacitor/cli": "7.2.0",
     "@chromatic-com/storybook": "3.2.6",
     "@compodoc/compodoc": "^1.1.26",
+    "@eslint/eslintrc": "^2.1.1",
+    "@eslint/js": "~8.57.0",
     "@ngxs/devtools-plugin": "19.0.0",
     "@nx/cypress": "21.0.1",
     "@nx/eslint": "21.0.1",
@@ -71,13 +73,12 @@
     "@storybook/core-server": "8.6.12",
     "@storybook/test": "8.6.12",
     "@storybook/test-runner": "0.22.0",
+    "@stylistic/eslint-plugin": "^4.2.0",
     "@swc-node/register": "1.10.10",
     "@swc/core": "1.11.24",
     "@swc/helpers": "0.5.17",
     "@types/jest": "29.5.14",
     "@types/node": "22.15.3",
-    "@typescript-eslint/eslint-plugin": "8.31.1",
-    "@typescript-eslint/parser": "8.31.1",
     "@typescript-eslint/utils": "8.31.1",
     "angular-eslint": "^19.3.0",
     "autoprefixer": "^10.4.21",
@@ -99,6 +100,7 @@
     "ts-jest": "29.3.2",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
+    "typescript-eslint": "^8.19.0",
     "verdaccio": "^6.1.2"
   },
   "nx": {
