--- a/apps/demo-e2e/project.json
+++ b/apps/demo-e2e/project.json
@@ -3,6 +3,8 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/demo-e2e/src",
   "projectType": "application",
+  "tags": [],
+  "implicitDependencies": ["demo"],
   "targets": {
     "e2e": {
       "executor": "@nx/cypress:cypress",
@@ -24,7 +26,5 @@
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"]
     }
-  },
-  "tags": [],
-  "implicitDependencies": ["demo"]
+  }
 }
