chore: migrate nx to latest

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "@ngxs/logger-plugin": "19.0.0",
     "@ngxs/router-plugin": "19.0.0",
     "@ngxs/store": "19.0.0",
-    "@nx/angular": "21.0.1",
+    "@nrwl/nx-cloud": "^19.1.0",
+    "@nx/angular": "21.0.2",
     "appwrite": "17.0.2",
     "date-fns": "^4.1.0",
     "ionicons": "^8.0.8",
@@ -56,14 +57,14 @@
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "~8.57.0",
     "@ngxs/devtools-plugin": "19.0.0",
-    "@nx/cypress": "21.0.1",
-    "@nx/eslint": "21.0.1",
-    "@nx/eslint-plugin": "21.0.1",
-    "@nx/jest": "21.0.1",
-    "@nx/js": "21.0.1",
-    "@nx/storybook": "21.0.1",
-    "@nx/web": "21.0.1",
-    "@nx/workspace": "21.0.1",
+    "@nx/cypress": "21.0.2",
+    "@nx/eslint": "21.0.2",
+    "@nx/eslint-plugin": "21.0.2",
+    "@nx/jest": "21.0.2",
+    "@nx/js": "21.0.2",
+    "@nx/storybook": "21.0.2",
+    "@nx/web": "21.0.2",
+    "@nx/workspace": "21.0.2",
     "@schematics/angular": "19.2.10",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-interactions": "8.6.12",
@@ -89,7 +90,7 @@
     "jest-preset-angular": "14.5.5",
     "jsonc-eslint-parser": "^2.4.0",
     "ng-packagr": "19.2.2",
-    "nx": "21.0.1",
+    "nx": "21.0.2",
     "postcss": "^8.5.3",
     "postcss-import": "16.1.0",
     "postcss-preset-env": "10.1.6",
