--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -9,8 +9,5 @@
   "dependencies": {
     "tslib": "^2.3.0"
   },
-  "sideEffects": false,
-  "scripts": {
-    "postinstall": "ngcc --properties es2015 browser module main"
-  }
+  "sideEffects": false
 }
