--- a/libs/core/.storybook/tsconfig.json
+++ b/libs/core/.storybook/tsconfig.json
@@ -1,18 +1,15 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "emitDecoratorMetadata": true,
-    "resolveJsonModule": true
+    "emitDecoratorMetadata": true
   },
   "exclude": ["../**/*.spec.ts"],
   "include": [
     "../src/**/*.stories.ts",
-    //"../src/**/*.stories.js",
-    //"../src/**/*.stories.jsx",
-    //"../src/**/*.stories.tsx",
-    //"../src/**/*.stories.mdx",
-    "../src/**/*.component.ts",
-    "../src/**/*.style.scss",
+    "../src/**/*.stories.js",
+    "../src/**/*.stories.jsx",
+    "../src/**/*.stories.tsx",
+    "../src/**/*.stories.mdx",
     "*.js",
     "*.ts"
   ]
