--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nx/angular": "21.1.2",
     "appwrite": "18.1.1",
     "date-fns": "^4.1.0",
+    "eslint-plugin-storybook": "^9.0.4",
     "ionicons": "8.0.9",
     "ngx-moment": "^6.0.2",
     "ngx-translate-debug": "^0.1.4",
@@ -66,6 +67,9 @@
     "@nx/web": "21.1.2",
     "@nx/workspace": "21.1.2",
     "@schematics/angular": "19.2.13",
+    "@storybook/addon-docs": "^8.6.14",
+    "@storybook/angular": "8.6.14",
+    "@storybook/test-runner": "^0.22.0",
     "@stylistic/eslint-plugin": "^4.4.1",
     "@swc-node/register": "1.10.10",
     "@swc/core": "1.11.29",
@@ -90,6 +94,7 @@
     "postcss-preset-env": "10.1.6",
     "postcss-url": "~10.1.3",
     "prettier": "^3.5.3",
+    "storybook": "8.6.14",
     "ts-jest": "29.3.4",
     "ts-node": "10.9.2",
     "typescript": "5.8.3",
